[package]
name = "deep"
version = "0.1.1"
authors = ["tglanz"]
description = "deep prototype"
repository = "https://github.com/tglanz/deep"
readme = "readme.md"

[dependencies]
serde = "*"
serde_json = "*"
deep_core = { path = 'core', version = '0.1.1' }
deep_cpu_backend = { path = 'cpu_backend', version = '0.1.1' }